--- a/index.html
+++ b/index.html
@@ -1,170 +1,119 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <!-- 모바일 대응 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>사다리게임 애니메이션 + 결과 하이라이트</title>
+  <title>사다리게임</title>
 
-  <!-- 카톡 링크 썸네일용 OG 태그 -->
-  <meta property="og:title" content="사다리게임" />
-  <meta property="og:description" content="전체 결과 확인하기" />
-  <meta property="og:image" content="https://raw.githubusercontent.com/Devil-Destroyer/ladder/main/ladder_thumbnail.png" />
-  <meta property="og:url" content="https://devil-destroyer.github.io/ladder/" />
+  <!-- OG 태그 (카톡 썸네일용) -->
+  <meta property="og:title" content="사다리게임">
+  <meta property="og:description" content="전체 결과 확인하기">
+  <meta property="og:image" content="https://raw.githubusercontent.com/Devil-Destroyer/ladder/main/ladder_thumbnail.png">
+  <meta property="og:url" content="https://devil-destroyer.github.io/ladder/">
 
   <style>
     body {
-      margin: 0;
-      padding: 1rem;
+      margin: 0; padding: 1rem;
       font-family: sans-serif;
       background: #fafafa;
+    }
+    h1 {
+      text-align: center; margin-bottom: 1rem;
+      font-size: 1.4rem;
+    }
+    .wrapper {
+      display: flex;
+      overflow-x: auto;
+      padding-bottom: 1rem;
+    }
+    .card {
+      flex: 0 0 auto;
+      width: 100px;
+      margin: 0 8px;
       text-align: center;
     }
-    canvas {
-      background: #fff;
-      border: 1px solid #ddd;
-      margin-bottom: 1rem;
+    .name {
+      font-weight: bold;
+      margin-bottom: 8px;
     }
-    #results {
-      font-size: 1.2rem;
-      line-height: 1.6;
+    .track {
+      position: relative;
+      height: 200px;
+      border-left: 3px solid #e74c3c;
+      margin: 0 auto;
+      overflow: hidden;
     }
-    #results ul {
-      list-style: none;
-      padding: 0;
+    .line {
+      position: absolute;
+      top: 0; left: -3px;
+      width: 3px;
+      height: 0;
+      background: #e74c3c;
+      transition: height 1.5s ease-out;
     }
-    #results li {
-      margin: 0.5rem 0;
+    .drink {
+      margin-top: 8px;
+      font-size: 0.9rem;
     }
-    .punishment { color: #e74c3c; font-weight: bold; }
-    .winner     { color: #27ae60; font-weight: bold; }
   </style>
 </head>
 <body>
-  <h1>🎯 사다리 게임</h1>
-  <canvas id="ladder" width="360" height="500"></canvas>
-  <div id="results"></div>
+
+  <h1>🎯 사다리 결과 🎯</h1>
+  <div class="wrapper" id="wrapper">
+    <!-- 카드들이 여기로 들어갑니다 -->
+  </div>
 
   <script>
-    // 1) 참가자 + 음료 + 컬러
     const participants = [
-      {name:"Jinsoo",           drink:"아이스아메리카노", color:"#3498db"},
-      {name:"세미",             drink:"원하는 음료 선택!!!", color:"#9b59b6"},
-      {name:"구자건",           drink:"아이스아메리카노", color:"#e67e22"},
-      {name:"김만성",           drink:"아이스아메리카노", color:"#1abc9c"},
-      {name:"김세봉",           drink:"원하는 음료 선택!!!", color:"#f1c40f"},
-      {name:"김철동",           drink:"아이스아메리카노", color:"#e84393"},
-      {name:"김태호",           drink:"아이스아메리카노", color:"#00cec9"},
-      {name:"신유선",           drink:"원하는 음료 선택!!!", color:"#0984e3"},
-      {name:"가보자고~~",      drink:"아이스아메리카노", color:"#d63031"},
-      {name:"엄기종",           drink:"아이스아메리카노", color:"#6c5ce7"},
-      {name:"이재승",           drink:"아샷추 2잔 with someone...", color:"#00b894"},
-      {name:"전덕성(베드로)",  drink:"아이스아메리카노", color:"#fdcb6e"},
+      {name:"임상혁",       drink:"딸기요거트샷추가"},
+      {name:"Jinsoo",       drink:"아이스아메리카노"},
+      {name:"세미",         drink:"원하는 음료 선택!!!"},
+      {name:"구자건",       drink:"아이스아메리카노"},
+      {name:"김만성",       drink:"아이스아메리카노"},
+      {name:"김세봉",       drink:"원하는 음료 선택!!!"},
+      {name:"김철동",       drink:"아이스아메리카노"},
+      {name:"김태호",       drink:"아이스아메리카노"},
+      {name:"신유선",       drink:"원하는 음료 선택!!!"},
+      {name:"가보자고~~",  drink:"아이스아메리카노"},
+      {name:"엄기종",       drink:"아이스아메리카노"},
+      {name:"이재승",       drink:"아샷추 2잔 with someone..."},
+      {name:"전덕성(베드로)", drink:"아이스아메리카노"},
     ];
-    // 2) 벌칙자
-    const punishment = {name:"임상혁", drink:"축~당첨: 딸기요거트샷추가", color:"#e74c3c"};
 
-    const allPlayers = [punishment, ...participants];
-    const cols = allPlayers.length;
-    const rows = 12;
-    const canvas = document.getElementById("ladder");
-    const ctx = canvas.getContext("2d");
-    const w = canvas.width, h = canvas.height;
-    const margin = 40;
-    const colW = (w - margin*2)/(cols-1);
-    const rowH = (h - margin*2)/(rows);
-
-    // 3) 랜덤 사다리 가로줄
-    const rungs = Array.from({length: rows}, () =>
-      Array.from({length: cols-1}, () => Math.random() < 0.4)
-    );
-
-    function drawLadder(){
-      ctx.clearRect(0,0,w,h);
-      ctx.lineWidth = 2; ctx.strokeStyle = "#aaa";
-      // 세로줄
-      for(let i=0; i<cols; i++){
-        const x = margin + i*colW;
-        ctx.beginPath(); ctx.moveTo(x, margin); ctx.lineTo(x, h-margin); ctx.stroke();
+    // 배열 섞기
+    function shuffle(arr) {
+      for (let i = arr.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [arr[i], arr[j]] = [arr[j], arr[i]];
       }
-      // 가로줄
-      for(let y=0; y<rows; y++){
-        for(let x=0; x<cols-1; x++){
-          if(rungs[y][x]){
-            const x1 = margin + x*colW;
-            const y1 = margin + y*rowH;
-            ctx.beginPath(); ctx.moveTo(x1, y1); ctx.lineTo(x1+colW, y1); ctx.stroke();
-          }
-        }
-      }
+      return arr;
     }
 
-    // 4) 경로 계산
-    function computePaths(){
-      return allPlayers.map((_, idx) => {
-        let cx = idx, cy = 0;
-        const path = [{x:cx, y:cy}];
-        while(cy < rows){
-          if(cx < cols-1 && rungs[cy][cx]) cx++;
-          else if(cx > 0 && rungs[cy][cx-1]) cx--;
-          cy++;
-          path.push({x:cx, y:cy});
-        }
-        return path;
-      });
-    }
+    const list = shuffle(participants.slice());
+    const wrapper = document.getElementById('wrapper');
 
-    // 5) 애니메이션 + 하이라이트
-    function animate(){
-      drawLadder();
-      const paths = computePaths();
-      let step = 0;
-      const maxStep = rows + 1;
-      // 일정 간격으로 프레임
-      const interval = setInterval(() => {
-        drawLadder();
-        // 모든 참가자 그리기
-        paths.forEach((path, i) => {
-          const pos = path[Math.min(step, maxStep)];
-          const px = margin + pos.x*colW;
-          const py = margin + pos.y*rowH;
-          ctx.beginPath();
-          ctx.fillStyle = allPlayers[i].color;
-          ctx.arc(px, py, 10, 0, Math.PI*2);
-          ctx.fill();
-          // 이름 위에
-          ctx.fillStyle = "#333";
-          ctx.font = "14px sans-serif";
-          ctx.textAlign = "center";
-          ctx.fillText(allPlayers[i].name, px, py - 16);
-          // 음료 아래에
-          ctx.font = "12px sans-serif";
-          ctx.fillText(allPlayers[i].drink, px, py + 24);
-        });
-        step++;
-        if(step > maxStep){
-          clearInterval(interval);
-          showResults();
-        }
-      }, 400); // 400ms 간격으로 속도 조절
-    }
-
-    // 6) 결과 하이라이트
-    function showResults(){
-      const resultsDiv = document.getElementById("results");
-      const winner = participants.find(p => p.drink.includes("샷"));
-      resultsDiv.innerHTML = `
-        <h2>결과</h2>
-        <ul>
-          <li class="punishment">🏴 ${punishment.name} → ${punishment.drink}</li>
-          <li class="winner">🎉 ${winner.name} → ${winner.drink}</li>
-        </ul>
+    // 카드 생성
+    list.forEach((p, idx) => {
+      const card = document.createElement('div');
+      card.className = 'card';
+      card.innerHTML = `
+        <div class="name">${p.name}</div>
+        <div class="track"><div class="line" id="line-${idx}"></div></div>
+        <div class="drink">${p.drink}</div>
       `;
-    }
+      wrapper.appendChild(card);
+    });
 
-    // 초기 표시
-    drawLadder();
-    // 자동 시작 혹은 클릭으로 시작
-    setTimeout(animate, 500);
+    // 애니메이션 시작: 약간의 딜레이를 주어서 연속으로 내려가는 느낌
+    list.forEach((_, idx) => {
+      const line = document.getElementById(`line-${idx}`);
+      // 딜레이: idx * 200ms
+      setTimeout(() => {
+        line.style.height = '200px'; 
+      }, idx * 200);
+    });
   </script>
 </body>
 </html>
